<resources>
    <string name="app_name">Assignment2_Stanziani</string>
    <string name="search_button">Search</string>
    <string name="movie_search">Movie Search</string>
    <string name="movie_details">Movie Details</string>
    <string name="back_button">Back</string>
    <string name="title_txt">Title</string>
    <string name="director_txt">Director</string>
    <string name="year_text">Year</string>
    <string name="rating_text">Rating</string>
    <string name="titleDetail_txt">Title</string>
    <string name="directorDetail_txt">Director</string>
    <string name="ratingDetails_txt">Rating</string>
    <string name="yearDetails_txt">Year</string>
    <string name="descriptionDetails_txt">Description</string>
</resources>