<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".View.MovieSearch">

    <ImageView
        android:id="@+id/imageDetailsView"
        android:layout_width="400dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/directorDetail_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directorDetail_txt"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleDetail_txt"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail_txt"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/descriptionDetails_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionDetails_txt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleDetail_txt"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail_txt"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/yearDetails_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearDetails_txt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleDetail_txt"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail_txt"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/titleDetail_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleDetail_txt"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/ratingDetails_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratingDetails_txt"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleDetail_txt"
        app:layout_constraintTop_toBottomOf="@+id/titleDetail_txt"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

</androidx.constraintlayout.widget.ConstraintLayout>